--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -72,3 +72,42 @@
   border-bottom: 1px solid gray;
   cursor: pointer;
 }
+.toggle{
+  display: none;
+}
+
+@media screen and (max-width: 1040px) {
+    .navbar-container {
+      font-size: 12px;
+    }
+}
+@media screen and (max-width: 990px) {
+  .center{
+    display: none;
+  }
+  .toggle{
+   display :  block;
+  }
+  .toggleList{
+    background-color: darkgrey;
+    color: white;
+    position: absolute;
+    list-style: none;
+    right: 10px;
+    padding: 5px 15px;
+    border-radius: 10px;
+  }
+  .toggleItem {
+    margin: 0 20px;
+    font-size: 14px;
+    font-weight: 600;
+    color: white;
+    padding: 0px 20px;
+    text-decoration: none;
+  }
+}
+@media screen and (max-width: 410px) {
+  .navbar-container {
+    font-size: 8px;
+  }
+}
