--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -71,3 +71,64 @@
 .explore-button:hover {
   background-color: rgba(31, 30, 30, 0.952);
 }
+
+@media screen and (max-width: 1040px) {
+  .desc{
+    font-size: 20px;
+  }
+  .title{
+    font-size: 50px !important;
+  }
+  .poster-img{
+    height: 350px;
+  }
+}
+@media screen and (max-width: 920px) {
+  .info-container{
+    margin-left: 50px;
+  }
+}
+@media screen and (max-width: 650px) {
+  .desc{
+    font-size: 20px;
+  }
+  .title{
+    font-size: 30px !important;
+  }
+  .poster-img{
+    height: 300px;
+  }
+  .info-container{
+    margin-left: 50px;
+  }
+}
+@media screen and (max-width: 490px) {
+  .desc{
+    font-size: 16px;
+  }
+  .title{
+    font-size: 25px !important;
+  }
+  .poster-img{
+    height: 250px;
+  }
+  .info-container{
+    margin-left: 40px;
+  }
+
+}
+@media screen and (max-width: 400px) {
+  .desc{
+    font-size: 16px;
+  }
+  .title{
+    font-size: 20px !important;
+  }
+  .poster-img{
+    height: 180px;
+  }
+  .info-container{
+    margin-left: 40px;
+  }
+
+}
