--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -82,3 +82,34 @@
     cursor: pointer;
     margin-top: 10px;
 }
+
+@media screen and (max-width : 820px) {
+    .bottom{
+      display: flex;
+      flex-direction: column;
+    }
+}
+@media screen and (max-width : 570px) {
+  .cart-image{
+    width: 150px;
+  }
+  .cart-amount,.cart-price{
+    font-size: 18px;
+  }
+}
+@media screen and (max-width : 570px) {
+  .cart-product-info{
+    font-size: 12px;
+  }
+  .cart-image{
+    width: 100px;
+  }
+}
+@media screen and (max-width : 400px) {
+  .product-details{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
