added progress bar

--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -13,6 +13,12 @@
     border-radius: 20px;
     box-shadow: 2px 3px 9px 0px rgba(0,0,0,0.75);
 }
+.credentials{
+    color: red;
+}
+.progress-bar{
+    margin-top: 20px;
+}
 .form-left{
     width: 40%;
     background-color: #23b182;
