--- a/src/pages/orders/orders.css
+++ b/src/pages/orders/orders.css
@@ -17,9 +17,12 @@
     flex-direction: column;
     justify-content: center;
 }
+.order-heading{
+    text-align: center;
+    margin: 25px 0 ;
+}
 .ordered-products-comp{
     display: flex;
-    flex-direction: column;
     justify-content: space-around;
     align-items: center;
 }
