--- a/src/pages/orders/orders.css
+++ b/src/pages/orders/orders.css
@@ -41,3 +41,8 @@
     align-items: center;
     cursor: pointer;
 }
+.no-items{
+    font-size: 30px;
+    font-weight: 200;
+    text-align: center;
+}
